<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.acconeer.bluetooth.distance.views.preferences.ScanPreference
        app:allowDividerBelow="true"
        app:icon="@drawable/sensor_icon"
        app:key="connected_device"/>

    <SeekBarPreference
        android:layout="@layout/labeled_seekbar_pref_layout"
        app:allowDividerAbove="true"
        app:dependency="connected_device"
        android:max="4"
        app:icon="@drawable/ic_settings_black_24dp"
        app:key="profile"
        app:title="@string/profile" />

    <EditTextPreference
        app:dependency="connected_device"
        app:icon="@drawable/ic_height_24px"
        app:key="range_start"
        app:title="@string/range_start" />

    <EditTextPreference
        app:dependency="connected_device"
        app:icon="@drawable/ic_linear_scale_black_24dp"
        app:key="range_length"
        app:title="@string/range_length" />

    <EditTextPreference
        app:dependency="connected_device"
        app:icon="@drawable/ic_graphic_eq_black_24dp"
        app:key="gain"
        app:title="@string/gain" />

    <EditTextPreference
        app:dependency="connected_device"
        app:icon="@drawable/ic_timelapse_black_24dp"
        app:key="update_rate"
        app:title="@string/update_rate" />

    <EditTextPreference
        app:dependency="connected_device"
        app:icon="@drawable/ic_icons8_electrical_threshold"
        app:key="fixed_threshold"
        app:title="@string/fixed_threshold" />

    <PreferenceCategory
        app:dependency="connected_device"
        app:title="@string/preferences_actions">

        <com.acconeer.bluetooth.distance.views.preferences.StartPreference
            app:allowDividerAbove="false"
            style="@style/AppPreference"
            app:icon="@drawable/ic_play_arrow_black_24dp"
            app:dependency="connected_device"
            app:key="start_measurement"
            app:title="@string/start_update"
            app:summary="@string/start_summary" />

        <com.acconeer.bluetooth.distance.views.preferences.StartPreference
            app:allowDividerAbove="false"
            style="@style/AppPreference"
            app:icon="@drawable/ic_remove_circle_black_24dp"
            app:dependency="connected_device"
            app:key="background_clutter_record"
            app:title="@string/background_clutter_title"
            app:summary="@string/background_clutter_summary" />

        <com.acconeer.bluetooth.distance.views.preferences.ConfirmPreference
            app:dependency="connected_device"
            app:icon="@drawable/ic_undo_black_24dp"
            app:dialogText="@string/restore_settings_confirm_question"
            app:key="restore_defaults"
            app:title="@string/restore_defaults"
            app:summary="@string/reset_settings_summary" />

    </PreferenceCategory>

</PreferenceScreen>
