<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acconeer.bluetooth.distance.activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        app:navigationIcon="@drawable/logo"
        app:titleTextColor="@android:color/white"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/internal_padding"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="7dp"
            android:paddingRight="15dp"
            android:paddingBottom="7dp">

            <TextView
                android:id="@+id/distance_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distancemm"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_label"
                android:layout_marginTop="7dp"
                android:gravity="center_horizontal"
                android:text="@string/no_distance_indicator"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/internal_padding"
        android:layout_marginTop="@dimen/internal_padding"
        android:layout_marginEnd="@dimen/internal_padding"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="7dp"
            android:paddingRight="15dp"
            android:paddingBottom="7dp">

            <TextView
                android:id="@+id/signal_strength_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signal_strength"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.acconeer.bluetooth.distance.views.SignalStrengthIndicator
                android:id="@+id/signal_strength"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@id/signal_strength_label"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="326dp"
        android:layout_height="212dp"
        android:layout_marginTop="4dp"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

        <com.acconeer.bluetooth.distance.views.DisplayPaperLevel
            android:id="@+id/paper_level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></com.acconeer.bluetooth.distance.views.DisplayPaperLevel>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/internal_padding"
        android:layout_marginBottom="@dimen/internal_padding"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.acconeer.bluetooth.distance.views.LabeledImageButton
            android:id="@+id/warningButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:imgSrc="@drawable/ic_warning_black_24dp"
            app:text="@string/gain_error"
            tools:visibility="visible" />

        <com.acconeer.bluetooth.distance.views.ConnectionButton
            android:id="@+id/connectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:imgSrc="@drawable/ic_bluetooth_disabled_black_24dp"
            app:text="@string/connect" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>